Fix github ribbon z-index

--- a/resources/assets/sass/pages/home.scss
+++ b/resources/assets/sass/pages/home.scss
@@ -9,7 +9,7 @@
         top: 0; 
         right: 0; 
         border: 0;
-        z-index: 999        
+        z-index: 9999;        
     }
 }
 .home {
